--- a/documentation/source/_themes/fontPartsTheme/static/sass_partials/elements.sass
+++ b/documentation/source/_themes/fontPartsTheme/static/sass_partials/elements.sass
@@ -168,7 +168,7 @@ a.headerlink:visited
 	background: transparent !important
 	max-width: 100vw
 	@media (max-width: $tablet-portrait)
-		margin-left: -$padding
+		// margin-left: -$padding
 
 	pre
 		border-radius: $rounded-corner-1
