--- a/documentation/source/_themes/fontPartsTheme/static/sass_partials/sidebar.sass
+++ b/documentation/source/_themes/fontPartsTheme/static/sass_partials/sidebar.sass
@@ -7,7 +7,7 @@
 	font-size: 1rem
 	font-family: $monofont
 	background: white
-	border-right: solid $lighter-gray 1px
+	// border-right: solid $lighter-gray 1px
 	display: flex
 	// justify-content: flex-end
 
@@ -33,6 +33,9 @@
 		letter-spacing: 0.16em
 
 	@media (max-width: $tablet-portrait)
+
+		z-index: 2
+
 		&.collapsed
 			position: fixed
 			width: $sidebarWidth 
@@ -59,8 +62,9 @@
 	top: $header-height
 	padding: 4rem 1rem 4rem 1rem //3rem 1rem
 	overflow-y: auto
-	max-height: calc(100vh - #{$sidebar-sticky-height})
+	max-height: calc(100vh - #{$header-height})
 	transform: translateX(-1rem)
+	border-right: solid #dddddd 1px
 	
 
 	@media screen and (max-width: $tablet-portrait)
@@ -114,6 +118,7 @@
 	pointer-events: all
 	transition: .25s ease
 	cursor: e-resize
+	z-index: 2
 
 	&.hidden
 		opacity: 0
