--- a/documentation/source/_themes/fontPartsTheme/static/sass_partials/syntax-highlighting.sass
+++ b/documentation/source/_themes/fontPartsTheme/static/sass_partials/syntax-highlighting.sass
@@ -14,3 +14,6 @@ body
 
         .bp
             color: $purple
+
+        .c1 // comments
+            font-style: normal
